Add Angie votign record

--- a/summary.ipynb
+++ b/summary.ipynb
@@ -29,31 +29,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 124,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "C:\\Users\\jtsen\\AppData\\Local\\Temp\\ipykernel_30520\\2247460441.py:15: DtypeWarning: Columns (2) have mixed types. Specify dtype option on import or set low_memory=False.\n",
-      "  df = pd.read_csv(os.path.join(path,df_name+'.csv'))\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "bills 93949\n",
-      "documents 184334\n",
-      "history 1255386\n",
-      "people 3562\n",
-      "rollcalls 33787\n",
-      "sponsors 228176\n",
-      "votes 2607269\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Read CSV files to dataframes\n",
     "dfs = {\"bills\":[],\n",
@@ -370,7 +348,7 @@
    "metadata": {},
    "source": [
     "### Voting Correlation \n",
-    "Angie votes straight Republican"
+    "Virtually every vote is majority Republican. Angie rarely dissents."
    ]
   },
   {
@@ -392,12 +370,37 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 111,
+   "execution_count": 127,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Angie voting record:\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "vote_desc\n",
+       "Yea       14529\n",
+       "Nay        1635\n",
+       "Absent      185\n",
+       "NV           12\n",
+       "Name: count, dtype: int64"
+      ]
+     },
+     "execution_count": 127,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "angie_voting_record = voting_record_df[voting_record_df.people_id == angie_button_id]\n",
-    "angie_voting_record = angie_voting_record.merge(rep_votes, how='left', left_on='roll_call_id', right_on='roll_call_id')"
+    "angie_voting_record = angie_voting_record.merge(rep_votes, how='left', left_on='roll_call_id', right_on='roll_call_id')\n",
+    "print(\"Angie voting record:\")\n",
+    "angie_voting_record['vote_desc'].value_counts()"
    ]
   },
   {
